Archive/68121c3652a2d3807effe312b5cf75ff-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:20:25: error: invalid conversion from 'int (*)(boost::optional<int>, boost::optional<int>)' to 'int (*)(int, int)' [-fpermissive]
     int(*p)(int, int) = foo;
                         ^
main.cpp:20:10: warning: unused variable 'p' [-Wunused-variable]
     int(*p)(int, int) = foo;
          ^
